2012-12-10  Christophe Dumez  <christophe.dumez@intel.com>

        Unreviewed EFL gardening.

        Unskip 5 MicroData test cases that were fixed in r137107.

        * platform/efl/TestExpectations:

2012-12-10  Christophe Dumez  <christophe.dumez@intel.com>

        Unreviewed EFL gardening.

        Add fast/canvas/webgl tests to TestExpectations since they
        sometimes crash on the bots.

        * platform/efl/TestExpectations:

2012-12-10  Joanmarie Diggs  <jdiggs@igalia.com>

        [GTK] accessibility/language-attribute.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=98369

        Reviewed by Chris Fleizach.

        The test is failing for two reasons: Not exposing the language
        for accessible objects and AccessibilityUIElement::language() not
        being implemented.

        * accessibility/language-attribute.html: Modified the test to work with
        both Mac and Atk platforms. (The former exposes static text objects as
        accessibles; the latter folds the text into the parent element.)
        * platform/gtk/TestExpectations: Unskipped the previously-failing test.

2012-12-10  Joanmarie Diggs  <jdiggs@igalia.com>

        [GTK] accessibility/editable-webarea-context-menu-point.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=98364

        Reviewed by Chris Fleizach.

        This test seems to be Mac-specific. Therefore, move the test to that
        platform and remove the skips from the other platforms.

        * platform/chromium/TestExpectations: Remove editable-webarea-context-menu-point.html
        * platform/efl-wk2/TestExpectations: Remove editable-webarea-context-menu-point.html
        * platform/gtk-wk2/TestExpectations: Remove editable-webarea-context-menu-point.html
        * platform/gtk/TestExpectations: Remove editable-webarea-context-menu-point.html